syntax = "proto3";
package role;
option go_package = ".;pb";
import "include/em.proto";

message RoleCreate {
    string name=1;
    string remark=2;
    repeated em.Id permissions=3;
}

message RoleEdit {
    uint32 id=1;
    string name=2;
    string remark=3;
    repeated em.Id permissions=4;
}

message RoleDelete {
    repeated em.Id roles=1;
}

service Role {
    rpc GetAll (em.Pagination) returns (em.Response) {};
    rpc Create (RoleCreate) returns (em.Response) {};
    rpc Edit (RoleEdit) returns (em.Response) {};
    rpc Delete (RoleDelete) returns (em.Response) {};
}